tests/bad/example-e10.rat
fn Main () -> Void {
  let a: Int = 10;
}
